# fundify

./: .gitignore  README.md  SOLUTIONS.md
backend/: app.js  package-lock.json  package.json  server.js  test_score.js
backend/controllers/: authController.js  modelController.js  userController.js
backend/middlewares/: error.js  userAuth.js
backend/models/: assetModel.js  data.json  expenseModel.js  financialGoalModel.js  financialHealthScoreModel.js  incomeModel.js  insuranceModel.js  liabilityModel.js  tempUserModel.js  userModel.js
backend/utils/: jwtToken.js  (+3 more)
frontend/: index.html  package-lock.json  package.json  vercel.json
model/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
model/app/: main.py
model/app/api/v1/: api.py
model/app/api/v1/endpoints/: analytics.py  health.py  rag.py  score.py  simulate.py  user_retrieval.py
model/app/api/v2/: api.py
model/app/api/v3/: api.py
model/app/core/: config.py  logging.py
model/app/infrastructure/: __init__.py
model/app/infrastructure/vectordb/: chroma.py
model/app/models/: __init__.py  score_schema.py  user_schema.py
model/app/services/: __init__.py
model/app/services/embedding/: base.py  gemini.py
model/app/services/engines/: goal_engine.py  net_worth.py  portfolio_engine.py  stress_engine.py
model/app/services/ingestion/: pipeline.py
model/app/services/llm/: gemini.py
model/app/services/rag/: pipeline.py
model/data/raw/: rbi_kyc.txt
model/financial_pdfs/: INDEX.md
model/scripts/: ingest_docs.py  ingest_pdfs.py  run_all_tests.py  run_tests.py  test.py  test_v3.py
(+36 files in other folders)
